--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vanilla-async",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "every.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "MIT"
 }
