--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vanilla-async",
-  "version": "1.0.8",
+  "name": "elite-async",
+  "version": "1.1.1",
   "description": "",
-  "main": "every.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
